--- a/sitefrenchGrammar2.html
+++ b/sitefrenchGrammar2.html
@@ -248,221 +248,7 @@
 
     <script>
         // Database of questions for each level and folder
-        const quizDatabase = {
-            debutant: {
-                "Grammaire de base": [
-                    {
-                        question: "Quelle est la terminaison correcte pour le verbe 'parler' à la 1ère personne du singulier au présent?",
-                        options: [
-                            { text: "e", correct: true, explanation: "À la 1ère personne du singulier, les verbes du 1er groupe (comme 'parler') se terminent par 'e'. Ex: je parle." },
-                            { text: "es", correct: false, explanation: "'es' est la terminaison pour la 2ème personne du singulier (tu parles)." },
-                            { text: "ons", correct: false, explanation: "'ons' est la terminaison pour la 1ère personne du pluriel (nous parlons)." },
-                            { text: "ez", correct: false, explanation: "'ez' est la terminaison pour la 2ème personne du pluriel (vous parlez)." }
-                        ],
-                        category: "Conjugaison"
-                    },
-                    {
-                        question: "Quel article défini faut-il utiliser avec 'école'?",
-                        options: [
-                            { text: "le", correct: false, explanation: "'le' est l'article masculin singulier, mais 'école' est féminin." },
-                            { text: "la", correct: true, explanation: "'école' est un nom féminin, donc on utilise 'la'." },
-                            { text: "les", correct: false, explanation: "'les' est l'article pluriel, mais ici on parle d'une école en général." },
-                            { text: "l'", correct: false, explanation: "On utilise 'l'' devant un nom commençant par une voyelle ou un h muet, ce qui n'est pas le cas ici." }
-                        ],
-                        category: "Articles"
-                    },
-                    {
-                        question: "Quelle phrase est correcte?",
-                        options: [
-                            { text: "Je vais au supermarché.", correct: true, explanation: "C'est la construction correcte avec 'aller à + lieu'." },
-                            { text: "Je vais dans supermarché.", correct: false, explanation: "On utilise 'dans' pour l'intérieur d'un lieu, pas pour la destination." },
-                            { text: "Je vais sur supermarché.", correct: false, explanation: "'sur' indique une position au-dessus, pas une destination." },
-                            { text: "Je vais à le supermarché.", correct: false, explanation: "Devant un nom masculin commençant par une consonne, 'à + le' devient 'au'." }
-                        ],
-                        category: "Prépositions"
-                    },
-                    {
-                        question: "Comment dit-on 'my book' en français?",
-                        options: [
-                            { text: "mon livre", correct: true, explanation: "'mon' est l'adjectif possessif masculin singulier pour la 1ère personne." },
-                            { text: "ma livre", correct: false, explanation: "Bien que 'livre' soit masculin, on ne peut pas utiliser 'ma'." },
-                            { text: "mes livre", correct: false, explanation: "'mes' est le pluriel, mais 'livre' est singulier ici." },
-                            { text: "me livre", correct: false, explanation: "'me' est un pronom complément, pas un adjectif possessif." }
-                        ],
-                        category: "Adjectifs possessifs"
-                    },
-                    {
-                        question: "Quel est le pluriel de 'journal'?",
-                        options: [
-                            { text: "journals", correct: false, explanation: "En français, on ne rajoute pas simplement un 's' comme en anglais." },
-                            { text: "journaux", correct: true, explanation: "Les noms en '-al' forment souvent leur pluriel en '-aux'." },
-                            { text: "journales", correct: false, explanation: "Cette terminaison n'existe pas en français." },
-                            { text: "journaus", correct: false, explanation: "L'orthographe correcte est 'journaux'." }
-                        ],
-                        category: "Pluriels"
-                    },
-                    {
-                        question: "Quelle phrase utilise correctement la négation?",
-                        options: [
-                            { text: "Je ne aime pas le café.", correct: false, explanation: "Il manque le 'n'' avant le verbe commençant par une voyelle." },
-                            { text: "Je n'aime pas le café.", correct: true, explanation: "La négation correcte est 'ne...pas' avec élision devant voyelle." },
-                            { text: "Je ne pas aime le café.", correct: false, explanation: "'Pas' doit être placé après le verbe." },
-                            { text: "Je n'aime le café pas.", correct: false, explanation: "'Pas' doit être placé immédiatement après le verbe." }
-                        ],
-                        category: "Négation"
-                    },
-                    {
-                        question: "Comment pose-t-on la question 'Vous parlez français?' en utilisant l'inversion?",
-                        options: [
-                            { text: "Parlez-vous français?", correct: true, explanation: "L'inversion sujet-verbe est une forme correcte d'interrogation." },
-                            { text: "Vous parlez français?", correct: false, explanation: "C'est correct à l'oral, mais pas une inversion formelle." },
-                            { text: "Est-ce que vous parlez français?", correct: false, explanation: "Correct, mais n'utilise pas l'inversion." },
-                            { text: "Vous parlez-t-il français?", correct: false, explanation: "Mélange incorrect de formes interrogatives." }
-                        ],
-                        category: "Interrogation"
-                    },
-                    {
-                        question: "Quel est le féminin de 'petit'?",
-                        options: [
-                            { text: "petite", correct: true, explanation: "On ajoute un 'e' pour former le féminin des adjectifs terminés par une consonne." },
-                            { text: "petitte", correct: false, explanation: "On n'ajoute pas de 't' supplémentaire." },
-                            { text: "petites", correct: false, explanation: "C'est le féminin pluriel, pas le singulier." },
-                            { text: "petit", correct: false, explanation: "La forme masculine ne change pas au féminin." }
-                        ],
-                        category: "Accord"
-                    }
-                ],
-                "Vocabulaire quotidien": [
-                    {
-                        question: "Comment dit-on 'apple' en français?",
-                        options: [
-                            { text: "banane", correct: false },
-                            { text: "pomme", correct: true },
-                            { text: "orange", correct: false },
-                            { text: "raisin", correct: false }
-                        ],
-                        category: "Fruits"
-                    },
-                    // 7 more questions...
-                ],
-                "Phrases utiles": [
-                    // 8 questions...
-                ],
-                "Nombres et temps": [
-                    // 8 questions...
-                ],
-                "Pronoms personnels": [
-                    // 8 questions...
-                ],
-                "Adjectifs courants": [
-                    // 8 questions...
-                ],
-                "Verbes fréquents": [
-                    // 8 questions...
-                ],
-                "Culture française": [
-                    // 8 questions...
-                ]
-            },
-            elementaire: {
-                "Passé composé": [
-                    // 8 questions...
-                ],
-                "Imparfait": [
-                    // 8 questions...
-                ],
-                "Futur simple": [
-                    // 8 questions...
-                ],
-                "Pronoms compléments": [
-                    // 8 questions...
-                ],
-                "Comparatifs": [
-                    // 8 questions...
-                ],
-                "Vocabulaire avancé": [
-                    // 8 questions...
-                ],
-                "Expressions courantes": [
-                    // 8 questions...
-                ],
-                "Lecture": [
-                    // 8 questions...
-                ]
-            },
-            intermediaire: {
-                "Subjonctif": [
-                    // 8 questions...
-                ],
-                "Conditionnel": [
-                    // 8 questions...
-                ],
-                "Discours indirect": [
-                    // 8 questions...
-                ],
-                "Pronoms relatifs": [
-                    // 8 questions...
-                ],
-                "Conjonctions": [
-                    // 8 questions...
-                ],
-                "Idiomes": [
-                    // 8 questions...
-                ],
-                "Littérature": [
-                    // 8 questions...
-                ],
-                "Rédaction": [
-                    // 8 questions...
-                ]
-            },
-            avance: {
-                "Concordance des temps": [
-                    // 8 questions...
-                ],
-                "Stylistique": [
-                    // 8 questions...
-                ],
-                "Littérature classique": [
-                    // 8 questions...
-                ],
-                "Philosophie": [
-                    // 8 questions...
-                ],
-                "Histoire": [
-                    // 8 questions...
-                ],
-                "Art": [
-                    // 8 questions...
-                ],
-                "Débats": [
-                    // 8 questions...
-                ],
-                "Traduction": [
-                    // 8 questions...
-                ]
-            }
-        };
-
-        // Fill in the rest of the questions for all folders (simplified for this example)
-        for (const level in quizDatabase) {
-            for (const folder in quizDatabase[level]) {
-                if (folder !== "Grammaire de base") {
-                    for (let i = 0; i < 8; i++) {
-                        quizDatabase[level][folder].push({
-                            question: `Question ${i+1} pour ${folder} (${level})`,
-                            options: [
-                                { text: "Option 1", correct: i % 4 === 0 },
-                                { text: "Option 2", correct: i % 4 === 1 },
-                                { text: "Option 3", correct: i % 4 === 2 },
-                                { text: "Option 4", correct: i % 4 === 3 }
-                            ],
-                            category: folder
-                        });
-                    }
-                }
-            }
-        }
+        let quizDatabase = {}
 
         // App State
         const state = {
@@ -498,11 +284,22 @@
         const userScoreElement = document.getElementById('user-score');
         const resetBtn = document.getElementById('reset-btn');
 
+        // Appelez cette fonction au chargement de la page
+        document.addEventListener('DOMContentLoaded', () => {
+        loadQuestions().then(() => {
+            // Initialisez le reste de votre application ici
+            loadScoreFromLocalStorage();
+        });
+        });
+
+
         // Level Cards
         const levelCards = document.querySelectorAll('.level-card');
         levelCards.forEach(card => {
-            card.addEventListener('click', () => {
+            card.addEventListener('click', async () => {
                 const level = card.getAttribute('data-level');
+                // Attendez que les questions soient chargées
+                await loadQuestions();
                 selectLevel(level);
             });
         });
@@ -547,7 +344,39 @@
         });
 
         // Functions
+
+        // Fonction pour charger les questions
+        async function loadQuestions() {
+        try {
+            const response = await fetch('questions.json');
+            if (!response.ok) {
+            throw new Error('Erreur de chargement des questions');
+            }
+            quizDatabase = await response.json();
+            return quizDatabase;
+        } catch (error) {
+            console.error('Erreur:', error);
+            // Vous pouvez fournir une base de questions par défaut ici
+            quizDatabase = {
+                debutant: {
+                    "Grammaire de base": [{
+                        question: "Question par défaut - Le fichier questions.json n'a pas pu être chargé",
+                        options: [
+                            { text: "Option 1", correct: true },
+                            { text: "Option 2", correct: false }
+                        ],
+                        category: "Erreur"
+                    }]
+                }
+            };
+            return quizDatabase;
+        }
+        }
         function selectLevel(level) {
+            // Dans la fonction selectLevel, au début :
+            console.log("Niveau sélectionné:", level);
+            console.log("Données chargées:", quizDatabase);
+            console.log("Dossiers disponibles pour ce niveau:", quizDatabase[level]);
             state.currentLevel = level;
             
             // Set level title
